패키지 파일 수정(no-browser 옵션 삭제)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev": "live-server --host=localhost --no-browser"
+    "dev": "live-server --host=localhost"
   },
   "devDependencies": {
     "live-server": "^1.2.2"
